--- a/jsjs/usecase/board.html
+++ b/jsjs/usecase/board.html
@@ -24,13 +24,13 @@
     <h3>데이터허브 활용사례</h3>
     <p>공공데이터를 활용하여 개발된 국내외 다양한 사례와 가공데이터를 공유하는 공간입니다.</p>
     <hr>
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="검색" aria-label="Username" aria-describedby="basic-addon1">
+    <div class="input-group mb-3 justify-content-end">
+        <input type="text" class="form-control flex-grow-0 flex-shrink-0 w-25" placeholder="검색" aria-label="Username" aria-describedby="basic-addon1">
         <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card h-100">
+            <div class="card">
                 <img src="https://www.data.go.kr/cmm/cmm/fileDownload.do?atchFileId=FILE_000000002379727&fileDetailSn=1" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">무지막지 교통사고</h5>
